# internal/db/sqlc/models.go
@@ -5,17 +5,16 @@
 package db
 
 import (
-	"database/sql"
 	"time"
 )
 
 type Comment struct {
-	ID        int64        `json:"id"`
-	UserID    int64        `json:"user_id"`
-	PostID    int64        `json:"post_id"`
-	Content   string       `json:"content"`
-	CreatedAt sql.NullTime `json:"created_at"`
-	UpdatedAt sql.NullTime `json:"updated_at"`
+	ID        int64     `json:"id"`
+	UserID    int64     `json:"user_id"`
+	PostID    int64     `json:"post_id"`
+	Content   string    `json:"content"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
 }
 
 type Follower struct {
